Update contact media-query and index

--- a/contact.html
+++ b/contact.html
@@ -23,10 +23,11 @@
 </head>
 <body>
 
+
 	<div class="bg-contact3" style="background-image: url('images/bg-01.jpg');">
 		<div class="container-contact3">
 			<div class="wrap-contact3">
-				<form class="contact3-form validate-form">
+				<form action="mailto:raiyan.islam@hotmail.com" method="post" enctype="text/plain" class="contact3-form validate-form">
 					<span class="contact3-form-title">
 						Contact Us
 					</span>
