--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
   <script type="text/javascript" src="js/script.min.js"></script>
 </head>
 
+
 <body data-spy="scroll" data-target=".navbar">
   <!-- Preloader -->
   <div id="preloader">
@@ -629,7 +630,7 @@
   </script>
   <!-- Preloader -->
   <script type="text/javascript">
-    $(window).on('load',function(){$('#status').fadeOut();$('#preloader').delay(100).fadeOut('slow');$('body').delay(100).css({'overflow':'visible'})})
+    $(window).on('load',function(){$('#status').fadeOut();$('#preloader').delay(100).fadeOut('slow');$('body').delay(100).css({'overflow':'hidden'})})
   </script>
 
   <script type="text/javascript">
