Update insex m-q and js file

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Raiyan Islam - Freelance Web Developer</title>
@@ -8,13 +9,13 @@
   <link rel="icon" type="image/png" sizes="32x32" href="vendor/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="vendor/favicon/favicon-16x16.png">
   <link rel="manifest" href="vendors/favicon/site.webmanifest">
-  <meta name="keywords" content="Web Designer,Web Developer,Graphic Designer,Freelancer,Landing Page Design,Newsletter Design,SEO"/>
-  <meta name="description" content="I'm a professional front-end web developer. My Work Focused On Growing Your Online Presence. Share with me your project information, and let's start working."/>
+  <meta name="keywords" content="Web Designer,Web Developer,Graphic Designer,Freelancer,Landing Page Design,Newsletter Design,SEO" />
+  <meta name="description" content="I'm a professional front-end web developer. My Work Focused On Growing Your Online Presence. Share with me your project information, and let's start working." />
   <meta name="author" content="Raiyan Islam">
-  <meta name="google-site-verification" content="2ZTb2bYv6_zYK6kBl0VAWZu8-MtIyO4bZc8vK2ZB3hk"/>
+  <meta name="google-site-verification" content="2ZTb2bYv6_zYK6kBl0VAWZu8-MtIyO4bZc8vK2ZB3hk" />
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;700&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"/>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
   <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
   <link rel="stylesheet" type="text/css" href="css/owl.theme.default.min.css">
   <link rel="stylesheet" href="css/all.min.css">
@@ -22,7 +23,7 @@
   <link rel="stylesheet" href="css/port.min.css">
   <link rel="stylesheet" href="css/styles.min.css">
   <link rel="stylesheet" href="css/media-query.css">
-  <!-- jQuery, Popper.js,Bootstrap JS -->
+  <!-- jQuery, Popper.js,Bootstrap JS etc -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
@@ -35,9 +36,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js"></script>
   <script type="text/javascript" src="js/parallax.min.js"></script>
+  <script type="text/javascript" src="js/typed.js"></script>
+  <script type="text/javascript" src="js/owl.carousel.min.js"></script>
   <script type="text/javascript" src="js/script.min.js"></script>
 </head>
-
 
 <body data-spy="scroll" data-target=".navbar">
   <!-- Preloader -->
@@ -266,7 +268,8 @@
           </div>
           <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
             <div class="card-body">
-              <li>National University, Bangladesh</li>
+              <li>National University, Bangladesh <br>
+                CGPA 2.63 out of 4.00 | Group: Sociology </li>
             </div>
           </div>
           <div id="headingTwo" class="edu" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
@@ -274,7 +277,8 @@
           </div>
           <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
             <div class="card-body">
-              <li>Pabna Clollege, Pabna</li>
+              <li>Pabna Clollege, Pabna <br>
+                Board: Rajshahi | Group: Science | GPA: 2.90 </li>
             </div>
           </div>
           <div id="headingThree" class="edu" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
@@ -282,7 +286,8 @@
           </div>
           <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
             <div class="card-body">
-              <li>Jagir Hossain Academy, Pabna</li>
+              <li>Jagir Hossain Academy, Pabna <br>
+                Board: Rajshahi | Group: Science | GPA: 3.31 </li>
             </div>
           </div>
         </div>
@@ -615,64 +620,8 @@
   </div>
   <!--End of footer section-->
 
-
-
-
-
-
-
-
-
-
   <!-- Optional JavaScript -->
-  <script>
-    new WOW().init();
-  </script>
-  <!-- Preloader -->
-  <script type="text/javascript">
-    $(window).on('load',function(){$('#status').fadeOut();$('#preloader').delay(100).fadeOut('slow');$('body').delay(100).css({'overflow':'hidden'})})
-  </script>
-
-  <script type="text/javascript">
-    var canvas=document.getElementById('nokey'),can_w=parseInt(canvas.getAttribute('width')),can_h=parseInt(canvas.getAttribute('height')),ctx=canvas.getContext('2d');var ball={x:0,y:0,vx:0,vy:0,r:0,alpha:1,phase:0},ball_color={r:207,g:255,b:4},R=2,balls=[],alpha_f=0.03,alpha_phase=0,link_line_width=0.8,dis_limit=260,add_mouse_point=!0,mouse_in=!1,mouse_ball={x:0,y:0,vx:0,vy:0,r:0,type:'mouse'};function getRandomSpeed(pos){var min=-1,max=1;switch(pos){case   'top':return[randomNumFrom(min,max),randomNumFrom(0.1,max)];break;case 'right':return[randomNumFrom(min,-0.1),randomNumFrom(min,max)];break;case 'bottom':return[randomNumFrom(min,max),randomNumFrom(min,-0.1)];break;case 'left':return[randomNumFrom(0.1,max),randomNumFrom(min,max)];break;default:return;break}}
-    function randomArrayItem(arr){return arr[Math.floor(Math.random()*arr.length)]}
-    function randomNumFrom(min,max){return Math.random()*(max-min)+min}
-    console.log(randomNumFrom(0,10));function getRandomBall(){var pos=randomArrayItem(['top','right','bottom','left']);switch(pos){case 'top':return{x:randomSidePos(can_w),y:-R,vx:getRandomSpeed('top')[0],vy:getRandomSpeed('top')[1],r:R,alpha:1,phase:randomNumFrom(0,10)}
-    break;case 'right':return{x:can_w+R,y:randomSidePos(can_h),vx:getRandomSpeed('right')[0],vy:getRandomSpeed('right')[1],r:R,alpha:1,phase:randomNumFrom(0,10)}
-    break;case 'bottom':return{x:randomSidePos(can_w),y:can_h+R,vx:getRandomSpeed('bottom')[0],vy:getRandomSpeed('bottom')[1],r:R,alpha:1,phase:randomNumFrom(0,10)}
-    break;case 'left':return{x:-R,y:randomSidePos(can_h),vx:getRandomSpeed('left')[0],vy:getRandomSpeed('left')[1],r:R,alpha:1,phase:randomNumFrom(0,10)}
-    break}}
-    function randomSidePos(length){return Math.ceil(Math.random()*length)}
-    function renderBalls(){Array.prototype.forEach.call(balls,function(b){if(!b.hasOwnProperty('type')){ctx.fillStyle='rgba('+ball_color.r+','+ball_color.g+','+ball_color.b+','+b.alpha+')';ctx.beginPath();ctx.arc(b.x,b.y,R,0,Math.PI*2,!0);ctx.closePath();ctx.fill()}})}
-    function updateBalls(){var new_balls=[];Array.prototype.forEach.call(balls,function(b){b.x+=b.vx;b.y+=b.vy;if(b.x>-(50)&&b.x<(can_w+50)&&b.y>-(50)&&b.y<(can_h+50)){new_balls.push(b)}
-    b.phase+=alpha_f;b.alpha=Math.abs(Math.cos(b.phase))});balls=new_balls.slice(0)}
-    function loopAlphaInf(){}
-    function renderLines(){var fraction,alpha;for(var i=0;i<balls.length;i++){for(var j=i+1;j<balls.length;j++){fraction=getDisOf(balls[i],balls[j])/dis_limit;if(fraction<1){alpha=(1-fraction).toString();ctx.strokeStyle='rgba(150,150,150,'+alpha+')';ctx.lineWidth=link_line_width;ctx.beginPath();ctx.moveTo(balls[i].x,balls[i].y);ctx.lineTo(balls[j].x,balls[j].y);ctx.stroke();ctx.closePath()}}}}
-    function getDisOf(b1,b2){var delta_x=Math.abs(b1.x-b2.x),delta_y=Math.abs(b1.y-b2.y);return Math.sqrt(delta_x*delta_x+delta_y*delta_y)}
-    function addBallIfy(){if(balls.length<20){balls.push(getRandomBall())}}
-    function render(){ctx.clearRect(0,0,can_w,can_h);renderBalls();renderLines();updateBalls();addBallIfy();window.requestAnimationFrame(render)}
-    function initBalls(num){for(var i=1;i<=num;i++){balls.push({x:randomSidePos(can_w),y:randomSidePos(can_h),vx:getRandomSpeed('top')[0],vy:getRandomSpeed('top')[1],r:R,alpha:1,phase:randomNumFrom(0,10)})}}
-    function initCanvas(){canvas.setAttribute('width',window.innerWidth);canvas.setAttribute('height',window.innerHeight);can_w=parseInt(canvas.getAttribute('width'));can_h=parseInt(canvas.getAttribute('height'))}
-    window.addEventListener('resize',function(e){console.log('Window Resize...');initCanvas()});function goMovie(){initCanvas();initBalls(30);window.requestAnimationFrame(render)}
-    goMovie();canvas.addEventListener('mouseenter',function(){console.log('mouseenter');mouse_in=!0;balls.push(mouse_ball)});canvas.addEventListener('mouseleave',function(){console.log('mouseleave');mouse_in=!1;var new_balls=[];Array.prototype.forEach.call(balls,function(b){if(!b.hasOwnProperty('type')){new_balls.push(b)}});balls=new_balls.slice(0)});canvas.addEventListener('mousemove',function(e){var e=e||window.event;mouse_ball.x=e.pageX;mouse_ball.y=e.pageY})
-  </script>
-
-  <script type="text/javascript" src="js/typed.js"></script>
-  <script type="text/javascript">
-    var options={strings:["Web Designer","Graphic Designer","Front-End Developer","Web Developer","WordPress Expert"],typeSpeed:80,backSpeed:70,loop:!0,}
-    var typed=new Typed(".type",options)
-  </script>
-
-  <!-- Config the skill bars -->
-  <script type="text/javascript" src="js/owl.carousel.min.js"></script>
-  <script type="text/javascript">
-    var owl=$('.owl-carousel');owl.owlCarousel({items:5,loop:!0,margin:100,autoplay:!0,autoplayTimeout:3000,autoplayHoverPause:!0});$('.play').on('click',function(){owl.trigger('play.owl.autoplay',[3000])})
-    $('.stop').on('click',function(){owl.trigger('stop.owl.autoplay')})
-  </script>
-  <!-- End JavaScript-->
   <!-- Happy Coding -->
-
-
 </body>
 
 </html>
