update index file

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
           <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
             <div class="card-body">
               <li>National University, Bangladesh <br>
-                CGPA 2.63 out of 4.00 | Group: Sociology </li>
+                BSS in Sociology (2014-2017)</li>
             </div>
           </div>
           <div id="headingTwo" class="edu" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
@@ -278,7 +278,8 @@
           <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
             <div class="card-body">
               <li>Pabna Clollege, Pabna <br>
-                Board: Rajshahi | Group: Science | GPA: 2.90 </li>
+                Higher Secondary Certificate 2013 <br>
+                Board: Rajshahi | Group: Science</li>
             </div>
           </div>
           <div id="headingThree" class="edu" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
@@ -287,7 +288,8 @@
           <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
             <div class="card-body">
               <li>Jagir Hossain Academy, Pabna <br>
-                Board: Rajshahi | Group: Science | GPA: 3.31 </li>
+                Secondary School Certificate-2011 <br>
+                Board: Rajshahi | Group: Science</li>
             </div>
           </div>
         </div>
