nre update media query and index

--- a/index.html
+++ b/index.html
@@ -764,12 +764,12 @@
             ><img src="images/facebook-logo.png" class="img-responsive fb zoom"
           /></a>
         </div>
-        <div class="col-3 tw wow fadeInUp">
+        <div class="col tw wow fadeInUp">
           <a href="https://twitter.com/raiyananondo" target="_blank"
             ><img src="images/twitter.png" class="img-responsive tw zoom"
           /></a>
         </div>
-        <div class="col-3 link wow fadeInUp">
+        <div class="col link wow fadeInUp">
           <a
             href="https://www.linkedin.com/in/raiyan-islam-a492b6bb/"
             target="_blank"
@@ -778,7 +778,7 @@
               class="img-responsive link zoom"
           /></a>
         </div>
-        <div class="col-3 inst wow fadeInUp">
+        <div class="col inst wow fadeInUp">
           <a href="https://www.instagram.com/anondo9" target="_blank"
             ><img
               src="images/instagram-logo.png"
