--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
 
     <div class="social-site">
       <div class="row text-center">
-        <div class="col-3 fb wow fadeInUp">
+        <div class="col fb wow fadeInUp">
           <a href="https://www.facebook.com/raiyan.islam.4" target="_blank"
             ><img src="images/facebook-logo.png" class="img-responsive fb zoom"
           /></a>
