add next gen format img

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <nav class="navbar sticky-nav navbar-expand-lg navbar-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="images/raiyan-logo.png" alt="Raiyan" class="logo"
+          <img src="images/raiyan-logo.webp" alt="Raiyan" class="logo"
         /></a>
         <button
           class="navbar-toggler"
@@ -163,11 +163,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-4 wow animated fadeInLeft">
-            <img
-              src="https://raiyanislam.github.io/cv/images/raiyan.jpg"
-              class="card-img"
-              alt="Raiyan"
-            />
+            <img src="images/raiyan.webp" class="card-img" alt="Raiyan" />
           </div>
           <div class="col-sm-8 wow animated fadeInRight">
             <h2 class="about-heading">
@@ -368,7 +364,7 @@
             <div class="portfolio design" data-cat="design">
               <div class="portfolio-wrapper second">
                 <img
-                  src="images/eudora_template.png"
+                  src="images/eudora_template.webp"
                   alt="eudora"
                   class="portfolio-bg"
                 />
@@ -392,7 +388,7 @@
             <div class="portfolio design" data-cat="design">
               <div class="portfolio-wrapper second">
                 <img
-                  src="images/online-img.png"
+                  src="images/online-img.webp"
                   alt="Online Advertising"
                   class="portfolio-bg"
                 />
@@ -416,7 +412,7 @@
             <div class="portfolio full-project" data-cat="full-project">
               <div class="portfolio-wrapper third">
                 <img
-                  src="images/panakeia.png"
+                  src="images/panakeia.webp"
                   alt="panakeia"
                   class="portfolio-bg"
                 />
@@ -440,7 +436,7 @@
             <div class="portfolio full-project" data-cat="full-project">
               <div class="portfolio-wrapper third">
                 <img
-                  src="images/ux-img.png"
+                  src="images/ux-img.webp"
                   alt="ux-design"
                   class="portfolio-bg"
                 />
@@ -461,7 +457,7 @@
             <div class="portfolio full-project" data-cat="full-project">
               <div class="portfolio-wrapper third">
                 <img
-                  src="images/enyo.png"
+                  src="images/enyo.webp"
                   alt="marketing"
                   class="portfolio-bg"
                 />
@@ -485,7 +481,7 @@
             <div class="portfolio full-project" data-cat="full-project">
               <div class="portfolio-wrapper third">
                 <img
-                  src="images/site_marketing.png"
+                  src="images/site_marketing.webp"
                   alt="marketing"
                   class="portfolio-bg"
                 />
@@ -509,7 +505,7 @@
             <div class="portfolio full-project" data-cat="full-project">
               <div class="portfolio-wrapper third">
                 <img
-                  src="images/sacredknowledge.png"
+                  src="images/sacredknowledge.webp"
                   alt="UX Design"
                   class="portfolio-bg"
                 />
@@ -528,7 +524,7 @@
             <div class="portfolio design" data-cat="design">
               <div class="portfolio-wrapper second">
                 <img
-                  src="images/floral.png"
+                  src="images/floral.webp"
                   alt="Email Template Design"
                   class="portfolio-bg"
                 />
@@ -549,7 +545,7 @@
             <div class="portfolio snippet" data-cat="snippet">
               <div class="portfolio-wrapper first">
                 <img
-                  src="images/business.png"
+                  src="images/business.webp"
                   alt="Email Template Design"
                   class="portfolio-bg"
                 />
@@ -568,7 +564,7 @@
             <div class="portfolio snippet" data-cat="snippet">
               <div class="portfolio-wrapper first">
                 <img
-                  src="images/nob.jpg"
+                  src="images/nob.webp"
                   alt="Graphic Design"
                   class="portfolio-bg"
                 />
@@ -587,7 +583,7 @@
             <div class="portfolio snippet" data-cat="snippet">
               <div class="portfolio-wrapper first">
                 <img
-                  src="images/flyer.jpg"
+                  src="images/flyer.webp"
                   alt="Graphic Design"
                   class="portfolio-bg"
                 />
@@ -606,7 +602,7 @@
             <div class="portfolio snippet" data-cat="snippet">
               <div class="portfolio-wrapper first">
                 <img
-                  src="images/slopelife.jpg"
+                  src="images/slopelife.webp"
                   alt="Graphic Design"
                   class="portfolio-bg"
                 />
