Add and remove some files

--- a/contact.html
+++ b/contact.html
@@ -165,7 +165,7 @@
       })
     </script>
     <!--===============================================================================================-->
-    <script src="js/main.js"></script>
+    <script async src="js/main.js"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
