--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -35,11 +36,6 @@
       name="author"
       content="Raiyan Islam, web designer, web developer, graphic designer, freelancer"
     />
-    <meta
-      name="google-site-verification"
-      content="2ZTb2bYv6_zYK6kBl0VAWZu8-MtIyO4bZc8vK2ZB3hk"
-    />
-    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;700&display=swap"
       rel="stylesheet"
@@ -67,16 +63,35 @@
     <link rel="stylesheet" href="css/styles.min.css" />
     <link rel="stylesheet" href="css/media-query.css" />
     <!-- jQuery, Popper.js,Bootstrap JS etc -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"></script>
-    <script src="https://kit.fontawesome.com/15726dcb43.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script type="text/javascript" src="js/parallax.min.js" defer></script>
-    <script type="text/javascript" src="js/typed.js" defer></script>
-    <script type="text/javascript" src="js/owl.carousel.min.js" defer></script>
-    <script type="text/javascript" src="js/script.min.js" defer></script>
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+    ></script>
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
+    ></script>
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
+    ></script>
+    <script
+      defer
+      src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"
+    ></script>
+    <script defer src="https://kit.fontawesome.com/15726dcb43.js"></script>
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"
+    ></script>
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"
+    ></script>
+    <script type="text/javascript" defer src="js/parallax.min.js"></script>
+    <script type="text/javascript" defer src="js/typed.min.js"></script>
+    <script type="text/javascript" defer src="js/owl.carousel.min.js"></script>
+    <script type="text/javascript" defer src="js/script.min.js"></script>
   </head>
 
   <body>
