--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
       content="Web Designer,Web Developer,Graphic Designer,Freelancer,Landing Page Design,Newsletter Design,SEO"
     />
     <meta
+      name="google-site-verification"
+      content="2ZTb2bYv6_zYK6kBl0VAWZu8-MtIyO4bZc8vK2ZB3hk"
+    />
+    <meta
       name="description"
       content="I'm a professional front-end web developer. My Work Focused On Growing Your Online Presence. Share with me your project information, and let's start working."
     />
@@ -84,14 +88,37 @@
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"
     ></script>
-    <script
-      defer
-      src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script type="text/javascript" defer src="js/parallax.min.js"></script>
     <script type="text/javascript" defer src="js/typed.min.js"></script>
     <script type="text/javascript" defer src="js/owl.carousel.min.js"></script>
     <script type="text/javascript" defer src="js/script.min.js"></script>
+    <!-- Google Analytics -->
+    <script>
+      ;(function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r
+        ;(i[r] =
+          i[r] ||
+          function () {
+            ;(i[r].q = i[r].q || []).push(arguments)
+          }),
+          (i[r].l = 1 * new Date())
+        ;(a = s.createElement(o)), (m = s.getElementsByTagName(o)[0])
+        a.async = 1
+        a.src = g
+        m.parentNode.insertBefore(a, m)
+      })(
+        window,
+        document,
+        'script',
+        'https://www.google-analytics.com/analytics.js',
+        'ga'
+      )
+
+      ga('create', 'UA-XXXXX-Y', 'auto')
+      ga('send', 'pageview')
+    </script>
+    <!-- End Google Analytics -->
   </head>
 
   <body>
