--- a/index.html
+++ b/index.html
@@ -418,8 +418,7 @@
                       href="https://raiyantech.github.io/Eudora_Template/"
                       class="template-btn"
                       target="_blank"
-                      >View</a
-                    >
+                      >View</a>
                   </div>
                   <div class="label-bg"></div>
                 </div>
@@ -442,8 +441,7 @@
                       href="http://raiyan.rf.gd/projects/Advertising/"
                       class="template-btn"
                       target="_blank"
-                      >View</a
-                    >
+                      >View</a>
                   </div>
                   <div class="label-bg"></div>
                 </div>
@@ -466,8 +464,7 @@
                       href="https://raiyantech.github.io/Panakeia_Template/"
                       class="template-btn"
                       target="_blank"
-                      >View</a
-                    >
+                      >View</a>
                   </div>
                   <div class="label-bg"></div>
                 </div>
@@ -511,8 +508,7 @@
                       href="https://raiyantech.github.io/Enyo_Template/"
                       class="template-btn"
                       target="_blank"
-                      >View</a
-                    >
+                      >View</a>
                   </div>
                   <div class="label-bg"></div>
                 </div>
@@ -535,8 +531,7 @@
                       href="http://raiyan.rf.gd/projects/SITE_MARKETING/"
                       class="template-btn"
                       target="_blank"
-                      >View</a
-                    >
+                      >View</a>
                   </div>
                   <div class="label-bg"></div>
                 </div>
@@ -767,9 +762,7 @@
                 style="color: #02fd5b; text-shadow: 1px 1px 3px #444"
                 >OR</span
               ><br />
-              <a href="https://infinite-reaches-52989.herokuapp.com/"
-                >Signup/Newsletter</a
-              >
+              <a href="https://infinite-reaches-52989.herokuapp.com/" />Signup/Newsletter</a>
             </h1>
             <p class="lead mb-0">Feel Free to Contact Me</p>
           </div>
