--- a/index.html
+++ b/index.html
@@ -93,32 +93,12 @@
     <script type="text/javascript" defer src="js/typed.min.js"></script>
     <script type="text/javascript" defer src="js/owl.carousel.min.js"></script>
     <script type="text/javascript" defer src="js/script.min.js"></script>
-    <!-- Google Analytics -->
     <script>
-      ;(function (i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r
-        ;(i[r] =
-          i[r] ||
-          function () {
-            ;(i[r].q = i[r].q || []).push(arguments)
-          }),
-          (i[r].l = 1 * new Date())
-        ;(a = s.createElement(o)), (m = s.getElementsByTagName(o)[0])
-        a.async = 1
-        a.src = g
-        m.parentNode.insertBefore(a, m)
-      })(
-        window,
-        document,
-        'script',
-        'https://www.google-analytics.com/analytics.js',
-        'ga'
-      )
-
-      ga('create', 'UA-XXXXX-Y', 'auto')
-      ga('send', 'pageview')
-    </script>
-    <!-- End Google Analytics -->
+      window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+      ga('create', 'UA-XXXXX-Y', 'auto');
+      ga('send', 'pageview');
+      </script>
+      <script async src='https://www.google-analytics.com/analytics.js'></script>
   </head>
 
   <body>
